--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,13 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
-a, a:hover {
-    color: red;
-    transition: .3s ease;
+a{
+    color: #282828;
+    transition: .1s ease;
+}
+
+a:hover {
+	color: #b99e64;
 }
 
 ::selection {
@@ -125,7 +129,9 @@ input:focus {
 }
 
 .btn-outline-success {
+	color: #A4854E;
 	border-color: #A4854E;
+	background:rgba(255, 255, 255, .1);
 }
 
 .btn-outline-success:hover,
@@ -134,6 +140,12 @@ input:focus {
 	background-color: #A4854E;
 	border-color: #A4854E;
 	box-shadow: rgba(164,133,78,.2) 0 0 0 6px;
+}
+
+.btn-outline-success:active:focus {
+	color: #ffffff; 
+	background-color: #161617; 
+	border-color: #494F57;
 }
 
 .btn-sm {
@@ -146,6 +158,10 @@ input:focus {
 	padding-left: .4375rem;
 	padding-right: .4375rem;
 	min-width: calc(.875rem + 1.5em + 2px);
+}
+
+.full-btn {
+	padding: 8px 80px;
 }
 
 /*-------------------------------------------------------------------------------
@@ -340,6 +356,15 @@ input:focus {
 	min-height: 100%;
 	display: flex;
 	align-items: center;
+	padding-top: 7.75rem;
+	padding-bottom: 3.25rem;
+	position: relative;
+}
+
+.slide-container2 {
+	width: 100%;
+	min-height: 100%;
+	display: flex;
 	padding-top: 7.75rem;
 	padding-bottom: 3.25rem;
 	position: relative;
@@ -725,54 +750,56 @@ input:focus {
 	background-position: center center;
 }
 
-/* .banner-slider .banner-item {
+.banner-slider .banner-item {
 	background-position: center center;
 	background-size: cover;
 	position: relative;
-	height: 1100px;
 	z-index: 0;
-  } */
-  
-  .banner-slider .banner-item::before {
+	bottom: 0;
+}
+
+.banner-slider .banner-item::before {
 	position: absolute;
 	content: '';
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(-30%, rgba(0, 0, 0, 0)), to(black));
-	background: linear-gradient(rgba(0, 0, 0, 0) -30%, black 100%);
+	background: -webkit-gradient(linear, to left, color-stop(-30%, rgba(21, 41, 79, 0)), to(#15294f));
+	background: linear-gradient(0.60turn, rgba(21, 41, 79, 0) -30%, #15294f 100%);
 	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
-	z-index: -1;
-  }
-  
-  .banner-slider .banner-item .banner-text {
+	z-index: -1;  
+}
+
+.banner-slider .banner-item .banner-text {
+	position: absolute;
 	text-align: center;
-	max-width: 860px;
-	margin: auto;
-	padding-bottom: 100px;
-  }
-  
-  .banner-slider .banner-item .banner-text h1 {
-	font-size: 75px;
-	font-weight: 700;
+	max-width: 600px;
+	bottom: 30%;	
+	left: 10%;
+}
+
+.banner-slider .banner-item .banner-text h1 {
+	font-size: 65px;
+	font-weight: 600;
 	color: #ffffff;
 	font-family: "Roboto Condensed", sans-serif;
 	margin-bottom: 30px;
-  }
-  
-  .banner-slider .banner-item .banner-text p {
-	color: #ffffff;
+	text-transform: uppercase;
+}
+
+.banner-slider .banner-item .banner-text p {
+	color: #b99e64;
 	max-width: 650px;
 	margin: auto;
 	font-size: 18px;
 	margin-bottom: 35px;
-  }
-  
-  .banner-slider .banner-item .banner-text .banner-btn {
+}
+
+.banner-slider .banner-item .banner-text .banner-btn {
 	line-height: 1;
-  }
-  
-  .banner-slider .banner-item .banner-text .banner-btn .default-btn {
+}
+
+.banner-slider .banner-item .banner-text .banner-btn .default-btn {
 	font-size: 18px;
 	background: #b99e64;
 	color: #ffffff;
@@ -783,37 +810,37 @@ input:focus {
 	position: relative;
 	z-index: 0;
 	overflow: hidden;
-  }
-  
- 
-  
-  .banner-slider .banner-item .banner-text .banner-btn .default-btn:hover {
+}
+
+
+
+.banner-slider .banner-item .banner-text .banner-btn .default-btn:hover {
 	color: #fff;
-  }
-  
-  .banner-slider .banner-item .banner-text .banner-btn .default-btn:hover::before {
+}
+
+.banner-slider .banner-item .banner-text .banner-btn .default-btn:hover::before {
 	width: 100%;
 	-webkit-transform: skewX(0);
 			transform: skewX(0);
 	left: 0;
-  }
-  
-  .banner-slider .owl-item.active h1 {
+}
+
+.banner-slider .owl-item.active h1 {
 	-webkit-animation: slideInDown 2s cubic-bezier(0, 0, 0, 1.02);
-			animation: slideInDown 2s cubic-bezier(0, 0, 0, 1.02);
-  }
-  
-  .banner-slider .owl-item.active p {
+		animation: slideInDown 2s cubic-bezier(0, 0, 0, 1.02);
+}
+
+.banner-slider .owl-item.active p {
 	-webkit-animation: slideInLeft 2s cubic-bezier(0, 0, 0, 1.02);
-			animation: slideInLeft 2s cubic-bezier(0, 0, 0, 1.02);
-  }
-  
-  .banner-slider .owl-item.active .banner-btn {
+		animation: slideInLeft 2s cubic-bezier(0, 0, 0, 1.02);
+}
+
+.banner-slider .owl-item.active .banner-btn {
 	-webkit-animation: slideInRight 2s cubic-bezier(0, 0, 0, 1.02);
-			animation: slideInRight 2s cubic-bezier(0, 0, 0, 1.02);
-  }
-  
-  .banner-slider .owl-prev, .banner-slider .owl-next {
+		animation: slideInRight 2s cubic-bezier(0, 0, 0, 1.02);
+}
+
+.banner-slider .owl-prev, .banner-slider .owl-next {
 	position: absolute;
 	left: 20px;
 	top: 45%;
@@ -827,9 +854,9 @@ input:focus {
 	opacity: 0;
 	-webkit-transition: .5s;
 	transition: .5s;
-  }
-  
-  .banner-slider .owl-prev::before, .banner-slider .owl-next::before {
+}
+
+.banner-slider .owl-prev::before, .banner-slider .owl-next::before {
 	position: absolute;
 	content: '';
 	width: 100%;
@@ -837,51 +864,179 @@ input:focus {
 	top: 0;
 	left: 0;
 	border-radius: 50px;
-  }
-  
-  .banner-slider .owl-prev:hover, .banner-slider .owl-next:hover {
+}
+
+.banner-slider .owl-prev:hover, .banner-slider .owl-next:hover {
 	background: #ffffff !important;
 	color: #b99e64 !important;
-  }
-  
-  .banner-slider .owl-next {
+}
+
+.banner-slider .owl-next {
 	left: inherit;
 	right: 20px;
-  }
-  
-  .banner-slider:hover .owl-prev {
+}
+
+.banner-slider:hover .owl-prev {
 	left: 40px;
 	opacity: 1;
-  }
-  
-  .banner-slider:hover .owl-next {
+}
+
+.banner-slider:hover .owl-next {
 	right: 40px;
 	opacity: 1;
-  }
-  
-  .banner-slider .owl-nav {
-	margin-top: 0;
-  }
+}
 
-  .owl-theme .owl-dots, .owl-theme .owl-nav {
+.banner-slider .owl-nav {
+	margin-top: 0;
+}
+
+.owl-theme .owl-dots, .owl-theme .owl-nav {
 	position: absolute;
 	bottom: 10%;
 	left: 50%;
-  }
+}
 
-  .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
 	background: #b99e64;
-  }
+}
 
-  .owl-theme .owl-dots .owl-dot span {
-	  background: #e3e3e3;
-  }
-  
-  .banner-bg-one {
-	background-image: url(../images/1.jpg);
-  }
-  
-  .banner-bg-two {
-	background-image: url(../images/2.jpg);
-  }
-  
+.owl-theme .owl-dots .owl-dot span {
+	background: #e3e3e3;
+}
+
+.banner-bg-one {
+	background-image: url(../images/bg1.png);
+}
+
+.banner-bg-two {
+	background-image: url(https://picsum.photos/1920/901);
+}
+
+.banner2 {
+	position: absolute;
+	bottom: 0;
+	height: 280px;
+	width: 100%;
+	background-image: url(../images/bg2.jpg);
+	color: #fff;
+	font-family: "Roboto Condensed", sans-serif;
+	display: flex;
+	align-items: center;
+}
+
+.banner2 .bosoo-line {
+	border-left: 1px solid rgba(255, 255, 255, .5);
+}
+
+.banner2 h1{
+	font-size: 26px;
+	font-weight: 600;
+}
+
+.banner6 {
+	height: 174px;
+	width: 850px;
+	background-image: url(../images/banner1.jpg);
+	color: #fff;
+	font-family: "Roboto Condensed", sans-serif;
+	border-radius: 20px;
+	display: flex;
+	align-items: center;
+}
+
+/* ABOUT PAGE */
+
+.about-page {
+	padding-top: 50px;
+}
+
+.about-page h1{
+	font-size: 30px;
+	font-weight: 400;
+	color: #b99e64;
+	font-family: "Roboto Condensed", sans-serif;
+	text-transform: uppercase;
+	margin-bottom: 20px;
+}
+
+.about-page ul {
+	list-style: none;
+}
+
+.about-page ul li{
+	line-height: 35px;
+	font-size: 16px;
+	font-weight: 400;
+	position: relative;
+}
+
+.about-page ul li i{
+	font-size: 23px;
+	color: #b99e64;
+	margin-left: 20px;
+	position: absolute;
+	top:5px;
+}
+
+.about-page ul li span{
+	margin-left: 50px;
+}
+
+.about-image {
+	border-radius: 20px;
+	width: 500px;
+	margin-top: 50px;
+}
+
+/* SERVICE */
+
+.service-page {
+	padding-top: 50px;
+}
+
+.service-page h1{
+	font-size: 30px;
+	font-weight: 400;
+	font-family: "Roboto Condensed", sans-serif;
+	margin-bottom: 20px;
+}
+
+.service-page h5 {
+	font-size: 14px;
+	font-weight: 400;
+}
+
+.service-page ul {
+	list-style: none;
+}
+
+.service-page ul li{
+	line-height: 35px;
+	font-size: 16px;
+	font-weight: 400;
+	position: relative;
+}
+
+.service-page ul li i{
+	font-size: 23px;
+	color: #b99e64;
+	margin-left: 20px;
+	position: absolute;
+	top:5px;
+}
+
+.service-page ul li span{
+	margin-left: 50px;
+}
+
+.service-image {
+	border-radius: 20px;
+	width: 500px;
+	margin-top: 50px;
+}
+
+
+
+.footer-logo {
+	width: 250px;
+}
