--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,31 @@ input:focus {
 	padding: 8px 80px;
 }
 
+.body-bg-dark .header:not(.header-shadow) .container-fluid {
+	color: #ffffff;
+}
+
+.body-bg-dark .header:not(.header-shadow) .header-tagline,
+.body-bg-dark .copyright,
+.body-bg-dark .slide-num,
+.body-bg-dark .footer .social a,
+.body-copyright-light .copyright {
+	color: rgba(255,255,255,.6);
+}
+
+.body-bg-dark .social a:hover {
+	color: #ffffff;
+}
+
+.body-bg-dark .header:not(.header-shadow) .nav-toggle .stick,
+.body-bg-dark #pp-nav li a:not(.active) span {
+	background: #ffffff;
+}
+
+.body-menu-opened .body-bg-dark .nav-toggle .stick {
+	background: #000000;
+}
+
 /*-------------------------------------------------------------------------------
   2. Preloader
 /* ------------------------------------------------------------------------------- */
@@ -912,6 +937,8 @@ input:focus {
 	background-image: url(https://picsum.photos/1920/901);
 }
 
+/* BANNER2 */
+
 .banner2 {
 	position: absolute;
 	bottom: 0;
@@ -932,6 +959,69 @@ input:focus {
 	font-size: 26px;
 	font-weight: 600;
 }
+
+/* BANNER3 */
+
+.banner3 {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+    padding-top: 40px;
+}
+
+.banner3 .banner {
+	background: url(../images/dark-bg.jpg) no-repeat center;
+    background-size: cover;
+	height: 280px;
+}
+
+.banner3 .banner .row-cont {
+    max-width: 1200px;
+    padding: 0 30px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.banner3 .banner .row-cont .banner-info {
+	padding: 100px 0 22px;
+    text-align: center;
+    max-width: 545px;
+    margin: 0 auto;
+    font-size: 18px;
+    line-height: 28px;
+    color: #fff;
+    position: relative;
+}
+
+.banner3 .banner .row-cont .banner-info .title{
+	margin-bottom: 50px;
+}
+
+.banner3 .banner .row-cont .banner-info .imac {
+	width: 400px;
+	height: 396px;
+	position: absolute;
+	bottom: -27px;
+	left: -400px;
+	background-repeat: no-repeat;
+	background-position: bottom;
+	background-size: contain;
+	background-image: url(../images/imac.png);
+}
+
+.banner3 .banner .row-cont .banner-info .iphone {
+    width: 400px;
+    height: 396px;
+    position: absolute;
+    bottom: -27px;
+    right: -420px;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+	background-image: url(../images/a-iphone.png);
+}
+
+/* BANNER6 */
 
 .banner6 {
 	height: 174px;
@@ -1030,6 +1120,126 @@ input:focus {
 }
 
 .service-image {
+	border-radius: 20px;
+	width: 500px;
+	margin-top: 50px;
+}
+
+/* SERVICES */
+
+.services-page {
+	padding-top: 50px;
+}
+
+.services-page h1{
+	font-size: 30px;
+	font-weight: 400;
+	font-family: "Roboto Condensed", sans-serif;
+	margin-bottom: 20px;
+}
+
+.services-page h5 {
+	font-size: 14px;
+	font-weight: 400;
+}
+
+.services-page ul {
+	list-style: none;
+}
+
+.services-page ul li{
+	line-height: 35px;
+	font-size: 16px;
+	font-weight: 400;
+	position: relative;
+}
+
+.services-page ul li i{
+	font-size: 23px;
+	color: #b99e64;
+	margin-left: 20px;
+	position: absolute;
+	top:5px;
+}
+
+.services-page ul li span{
+	margin-left: 50px;
+}
+
+.services-image {
+	border-radius: 20px;
+	width: 500px;
+	margin-top: 50px;
+}
+
+.partners {
+	position: absolute;
+	bottom: 0;
+	height: 400px;
+	width: 100%;
+	background: #fff;
+	color: #b99e64;
+	font-family: "Roboto Condensed", sans-serif;
+}
+
+.service-box {
+	margin: 10px;
+	background: #fff;
+	height: 200px;
+	border-radius: 10px;
+	color: #b99e64;
+	-webkit-box-shadow: 0px 1px 10px 1px rgba(40, 40, 40, .1); 
+	box-shadow: 0px 1px 10px 1px rgba(40, 40, 40, .1);
+}
+
+.service-box i {
+	font-size: 50px;
+}
+
+.service-box .title h4 {
+	font-size: 18px;
+}
+
+
+/* STEP PAGE */
+
+.step-page {
+	padding-top: 50px;
+}
+
+.step-page h1{
+	font-size: 30px;
+	font-weight: 400;
+	color: #b99e64;
+	font-family: "Roboto Condensed", sans-serif;
+	text-transform: uppercase;
+	margin-bottom: 20px;
+}
+
+.step-page ul {
+	list-style: none;
+}
+
+.step-page ul li{
+	line-height: 35px;
+	font-size: 16px;
+	font-weight: 400;
+	position: relative;
+}
+
+.step-page ul li i{
+	font-size: 23px;
+	color: #b99e64;
+	margin-left: 20px;
+	position: absolute;
+	top:5px;
+}
+
+.step-page ul li span{
+	margin-left: 50px;
+}
+
+.step-image {
 	border-radius: 20px;
 	width: 500px;
 	margin-top: 50px;
